log
Wed 24 Apr 2024 03:30:34 PM UTC: 
 tests:  0|6
total_score: 0/70
a93bd7b
Wed 24 Apr 2024 03:33:45 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
01f4db6
Wed 24 Apr 2024 03:37:25 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|4
total_score: 30/70
687bf25
Wed 24 Apr 2024 03:44:20 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:78:6: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   78 |   if(map==NULL)return NULL;
      |      ^~~
      |      mapa
hashmap.c:78:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
90cf862
Wed 24 Apr 2024 03:45:07 PM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  6|3
total_score: 40/70
6636643
